Replace deprecated new warnings with valueOf